Fix: Image overflow contained

--- a/assets/css/orbit-1.css
+++ b/assets/css/orbit-1.css
@@ -256,7 +256,7 @@ p {
   margin-bottom: 30px;
 }
 
-.diploma {
+#override .diploma {
   width: 100%;
 }
 
